--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coding",
     "dev"
   ],
-  "author": "Ryan Fitzgerald",
+  "author": "Josh Westbury",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
@@ -24,5 +24,6 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-wait": "0.0.2"
-  }
+  },
+  "dependencies": {}
 }
