--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-uglify": "^3.0.0",
     "gulp-wait": "0.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "calendar": "^0.1.0",
+    "github": "^12.0.1"
+  }
 }
