--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "calendar": "^0.1.0",
-    "github": "^12.0.1"
+    "github": "^12.0.1",
+    "typed.js": "^2.0.6"
   }
 }
